[package]
name = "kiops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1", features = ["alloc"] }
uuid = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.6.0"
